# PyTorus

./: .gitignore  .numerics.py.swp  .setup.py.swp  MANIFEST.in  Makefile  README.md  bdt.txt  lldb_script.txt  matrix.py  matrix_funcs.txt  norm  norm.cpp  num  numeric_template.py  numerics.py  numerics_func.txt  numerics_test.txt  performance.py  setup.py  stuff.txt  test.cpp  test.py  test.txt  test_matrix.txt  test_numerics.cpp  test_torus.py  tred  tred.cpp  vect.py  wrap.cpp
libebf_c_cpp-0.0.3/: AUTHORS  COPYING  Makefile  Makefile.am  Makefile.in  NEWS  README  config.h  config.status  configure  configure.ac  libtool  test.txt
libebf_c_cpp-0.0.3/data/: Makefile  Makefile.am  Makefile.in  master_test1.ebf
libebf_c_cpp-0.0.3/include/: ebf.hpp  ebftable.h  ebftable.hpp
libebf_c_cpp-0.0.3/lib/: libebf_cpp.0.dylib  libebf_cpp.dylib
libebf_c_cpp-0.0.3/share/ebf/: master_test1_swap.ebf
libebf_c_cpp-0.0.3/src/: Makefile  Makefile.am  Makefile.in
libebf_c_cpp-0.0.3/src/c/: Makefile  Makefile.am  Makefile.in  ebf.c  ebf.h  ebf.lo  ebf_demo.c  ebf_demo.h  ebf_libc_test  ebf_libc_test.c  ebftable.c  ebftable.lo  libebf_c.la
libebf_c_cpp-0.0.3/src/c/.deps/: ebf.Plo  ebf_demo.Po  ebf_libc_test.Po  ebftable.Plo
libebf_c_cpp-0.0.3/src/c/.libs/: ebf_libc_test  libebf_c.0.dylib  libebf_c.dylib  libebf_c.la  libebf_c.lai
libebf_c_cpp-0.0.3/src/cpp/: Makefile  Makefile.am  Makefile.in  ebf.cpp  ebf_demo.cpp  ebf_libcpp_test  ebf_libcpp_test.cpp  ebftable.cpp  ebfvector.hpp  libebf_cpp.la  timer.cpp  timer.hpp
libebf_c_cpp-0.0.3/src/cpp/.deps/: ebf.Plo  ebf_demo.Po  (+3 more)
(+32 files in other folders)
