AC_INIT([libebf_c_cpp], [0.0.3], [bug-report@address])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
LT_INIT
AC_PROG_FC
AC_PROG_CC
AC_PROG_CXX
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile src/c/Makefile src/cpp/Makefile  data/Makefile ])
#AC_CONFIG_FILES([Makefile ])
AC_OUTPUT
